update: upgrade to latest react v18 and router-dom v6. Need to work on layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   display: flex;
 }
-.App .container{
+
+.App .container {
+  display: flex;
   flex-grow: 1;
   padding: 0 60px;
 }
